# logistics

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
apresentacao/: DAG73-1.pptx
codigo/: CMakeLists.txt
codigo/include/: constants.h
codigo/include/entities/: delivery.h  driver.h
codigo/include/scenarios/: driver_optimization.h  reward_optimization.h  start_optimization.h
codigo/src/: dataset.cpp  sparse_hypercube.cpp  ui.cpp
codigo/src/entities/: delivery.cpp
codigo/src/scenarios/: driver_optimization.cpp  reward_optimization.cpp
docs/: Doxyfile
docs/output/html/: annotated.html  annotated_dup.js  class_delivery-members.html  class_delivery.html  class_driver-members.html  class_driver.html  class_driver.js  class_driver_optimization-members.html  class_driver_optimization.html  class_driver_optimization.js  class_file-members.html  class_file.html  class_get_line-members.html  class_get_line.html  class_menu-members.html  class_menu.html  class_menu_block-members.html  class_menu_block.html  class_reward_optimization-members.html  class_reward_optimization.html  class_sparse_hypercube-members.html  class_sparse_hypercube.html  class_sparse_hypercube.js  class_sparse_hypercube_1_1_entry-members.html  class_sparse_hypercube_1_1_entry.html  class_start_optimization-members.html  class_start_optimization.html  class_u_i-members.html  class_u_i.html  class_u_i.js  classend__of__file__exception-members.html  classend__of__file__exception.html  classes.html  classvalidation__error-members.html  classvalidation__error.html  constants_8h_source.html  dataset_8h_source.html  delivery_8h_source.html  dir_4563ce166fd24a17a0623db1f3455956.html  dir_4563ce166fd24a17a0623db1f3455956.js  (+25 more)
docs/output/html/search/: all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_e.js  classes_3.js  classes_4.js  classes_6.js  functions_0.js  functions_1.js  functions_4.js  functions_a.js  functions_c.js  searchdata.js  variables_1.js  variables_3.js  variables_5.js  variables_7.js  variables_8.js
documentacao/: Doxyfile
documentacao/output/html/: class_delivery-members.html  class_delivery.html  class_delivery.js  class_driver-members.html  class_driver_optimization-members.html  class_driver_optimization.html  class_file-members.html  class_file.html  class_file.js  class_menu.html  class_menu_block-members.html  class_reward_optimization-members.html  class_reward_optimization.html  class_reward_optimization.js  class_sparse_hypercube-members.html  class_sparse_hypercube.html  class_sparse_hypercube_1_1_entry.js  class_start_optimization.js  class_u_i.html  classes.html  classvalidation__error-members.html  classvalidation__error.html  dataset_8h_source.html  dir_5fefe499304060e834c510c6ecaf0960.html  dir_b7a08337280d48a2c09e7921a57d84c8.html  dir_e67057bb3ebf304a7fc6560431d83793.html  dir_e67057bb3ebf304a7fc6560431d83793.js  driver_8h_source.html  files.html  functions_func.html  functions_vars.html  hierarchy.js  index.html  navtreedata.js  reward__optimization_8h_source.html  sparse__hypercube_8h_source.html  struct_sparse_hypercube_1_1_entry_hash-members.html  ui_8h_source.html
documentacao/output/html/search/: all_11.js  all_2.js  all_d.js  classes_0.js  classes_1.js  classes_5.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_b.js  pages_0.js  variables_0.js  variables_6.js
include/: constants.h  dataset.h  scenario1.h  scenario2.h  scenario3.h  sparse_boobacube.h  sparse_hypercube.h  ui.h
include/entities/: delivery.h  driver.h  van.h
include/scenarios/: driver_optimization.h  reward_optimization.h  start_optimization.h
src/: dataset.cpp  knapsack.cpp  scenario1.cpp  scenario2.cpp  scenario3.cpp  sparse_boobacube.cpp  ui.cpp
src/entities/: delivery.cpp  driver.cpp  van.cpp
src/scenarios/: driver_optimization.cpp  reward_optimization.cpp  scenario1.cpp  start_optimization.cpp
